<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">BYUI EVENTS</string>
    <string name="action_search">Search</string>
    <string name="title_activity_week">WeekActivity</string>
    <string name="week">You Made It!</string>
    <string name="week_tab">Week</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="title_activity_month">MonthActivity</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="action_filter">Filter</string>
    <string name="action_event_type">By Event Type</string>
    <string name="action_location">By Location</string>

</resources>
