<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:eventsApp="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/action_event_type"
                android:title="@string/action_event_type"
                android:showAsAction="always|withText">

            </item>

            <item android:id="@+id/action_location"
                android:title="@string/action_location"
                android:showAsAction="always|withText" />
        </menu>
    </item>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom" />

</menu>
